--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -128,8 +128,8 @@
                             </div>
                         </div>
                         <ul class="profile-menu">
-                            <li><a href="/profile.html" data-page="profile"><i class="bi bi-person"></i> View Profile</a></li>
-                            <li><a href="/profile.html#settings" data-page="profile"><i class="bi bi-gear"></i> Settings</a></li>
+                            <li><a href="/user_profile.html" data-page="profile"><i class="bi bi-person"></i> View Profile</a></li>
+                            <li><a href="/user_profile.html#settings" data-page="profile"><i class="bi bi-gear"></i> Settings</a></li>
                             <li><a href="#" data-action="logout"><i class="bi bi-box-arrow-right"></i> Logout</a></li>
                         </ul>
                     </div>
@@ -168,7 +168,7 @@
                         </a>
                     </li>
                     <li class="mobile-item">
-                        <a href="/profile.html" class="mobile-link" data-page="profile">
+                        <a href="/user_profile.html" class="mobile-link" data-page="profile">
                             <i class="bi bi-person-fill"></i>
                             <span>Profile</span>
                         </a>
