create game implementation

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -33,7 +33,7 @@
             <input type="text" placeholder="Search Laro" />
         </div>
         <ul class="nav-links">
-            <li><a href="/overview.html" title="Overview"><i class="bi bi-info-circle-fill"></i></a></li>
+            <li><a href="/overview/" title="Overview"><i class="bi bi-info-circle-fill"></i></a></li>
             <li class="notification-item">
                 <a href="#" id="notification-bell">
                     <i class="bi bi-bell-fill"></i>
@@ -118,7 +118,7 @@
                 </div>
             </li>
             <li class="profile-item">
-                <a href="/profile.html">
+                <a href="/profile/">
                     <i class="bi bi-person-circle"></i>
                     <span id="username-display">PROFILE</span>
                 </a>
