--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>LARO - Sign Up</title>
     <link rel="stylesheet" href="/static/styles/login.css" />
-    <script defer src="/static/scripts/signup.js"></script>
+    <script type="module" defer src="/static/scripts/signup.js"></script>
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <!-- Font Awesome -->
@@ -37,7 +37,7 @@
                     <i class="bi bi-google"></i>
                     Sign up with Google
                 </button>
-                <p class="signup-text">Already have an account? <a href="/login.html" class="btn btn-login login-btn">LOG IN</a></p>
+                <p class="signup-text">Already have an account? <a href="/login/" class="btn btn-login login-btn">LOG IN</a></p>
             </form>
         </div>
     </div>
