--- a/templates/index.html
+++ b/templates/index.html
@@ -25,8 +25,8 @@
                     <li><a href="#contact">CONTACT US</a></li>
                 </ul>
                 <div class="auth-buttons">
-                    <a href="login.html" class="btn btn-login">LOG IN</a>
-                    <a href="signup.html" class="btn btn-signup">SIGN UP</a>
+                    <a href="/login/" class="btn btn-login">LOG IN</a>
+                    <a href="/signup/" class="btn btn-signup">SIGN UP</a>
                 </div>
                 <div class="menu-toggle">
                     <span></span>
@@ -44,7 +44,7 @@
                     <h1>WELCOME TO <span>LARO</span></h1>
                     <p class="hero-subtitle">The ultimate basketball community platform</p>
                     <div class="hero-buttons">
-                        <a href="signup.html" class="btn btn-signup animate-pulse">GET STARTED</a>
+                        <a href="signup/" class="btn btn-signup animate-pulse">GET STARTED</a>
                         <a href="#about" class="btn btn-login">LEARN MORE</a>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                 <div class="ambassador-info">
                     <h3>Join the LARO Community</h3>
                     <p>Be part of a growing basketball community that's changing how people play and connect through the sport.</p>
-                    <a href="signup.html" class="btn btn-signup">JOIN NOW</a>
+                    <a href="signup/" class="btn btn-signup">JOIN NOW</a>
                 </div>
             </div>
         </div>
