--- a/templates/login.html
+++ b/templates/login.html
@@ -18,6 +18,7 @@
         <div class="form-container">
             <h1>WELCOME!</h1>
             <form id="login-form">
+                {% csrf_token %}
                 <input type="email" id="email" name="email" placeholder="Email Address" required />
                 <div class="password-container">
                     <input type="password" id="password" name="password" placeholder="Password" required />
@@ -30,7 +31,7 @@
                     <i class="bi bi-google"></i>
                     Sign in with Google
                 </button>
-                <p class="signup-text">Don't have an account? <a href="/signup.html" class="btn btn-signup signup-btn">SIGN UP</a></p>
+                <p class="signup-text">Don't have an account? <a href="/signup/" class="btn btn-signup signup-btn">SIGN UP</a></p>
             </form>
         </div>
     </div>
