--- a/templates/signup.html
+++ b/templates/signup.html
@@ -37,7 +37,7 @@
                     <i class="bi bi-google"></i>
                     Sign up with Google
                 </button>
-                <p class="signup-text">Already have an account? <a href="/login.html" class="btn btn-login login-btn">LOG IN</a></p>
+                <p class="signup-text">Already have an account? <a href="/login/" class="btn btn-login login-btn">LOG IN</a></p>
             </form>
         </div>
     </div>
